Fix header pony + goat alignment. finally.

--- a/tutorials/static/base.css
+++ b/tutorials/static/base.css
@@ -35,14 +35,25 @@ pre {
 .document pre.literal-block {
     background: lightgrey;
 }
-#page_title {
-    margin-left: 5%;
-}
 
 #page_title h1, #page_title h2{
     font-family: DejaVu Sans Light;
     text-align: center;
 }
+
+#page_title ul {
+    padding: 0;
+    margin-top: 20px;
+    list-style: none;
+    text-align: center;
+}
+
+#page_title ul li {
+    padding-left: 20px;
+    padding-right: 20px;
+    display: inline-block;
+}
+
 
 #article-meta h4, #article-meta p{
     font-size: smaller;
